--- a/angular-front/angular.json
+++ b/angular-front/angular.json
@@ -72,11 +72,16 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
+            "options": {
+              "proxyConfig": "src/proxy.config.json"
+            },
             "production": {
-              "browserTarget": "angular-front:build:production"
+              "browserTarget": "angular-front:build:production",
+              "proxyConfig": "src/proxy.config.json"
             },
             "development": {
-              "browserTarget": "angular-front:build:development"
+              "browserTarget": "angular-front:build:development",
+              "proxyConfig": "src/proxy.config.json"
             }
           },
           "defaultConfiguration": "development"
